change submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "JianYangAI"]
-	path = JianYangAI
-	url = git@github.com:747929791/MahjongAI.git
 [submodule "majsoul_wrapper"]
 	path = majsoul_wrapper
-	url = git@github.com:747929791/majsoul_wrapper.git
+	url = git@github.com:quehunai/majsoul_wrapper.git
